--- a/poc/src/main/resources/org/epa/mda/poc/ProgramType-form.form
+++ b/poc/src/main/resources/org/epa/mda/poc/ProgramType-form.form
@@ -3,4 +3,5 @@
 <property name="name" value="ProgramType-form.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
+<dataHolder inputId="programTypeIn" name="#E9E371" type="dataModelerEntry" outId="programTypeOut" value="org.epa.mda.poc.ProgramType" id="programType"/>
 </form>
