{/poc/src/main/resources/org/epa/mda/poc/poc.CompanyRegistration-taskform.form}

--- a/poc/src/main/resources/org/epa/mda/poc/poc.CompanyRegistration-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/poc.CompanyRegistration-taskform.form
@@ -3,23 +3,23 @@
 <property name="name" value="poc.CompanyRegistration-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
-<field position="0" name="company_address" type="InputText" id="1183952754">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;address (company)quot;"/>
-<property name="readonly" value="false"/>
-<property name="outputBinding" value="company/address"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="1" name="company_name" type="InputText" id="1989963677">
+<field position="0" name="company_name" type="InputText" id="676148011">
 <property name="fieldRequired" value="false"/>
 <property name="label" value="quot;enquot;,quot;name (company)quot;"/>
 <property name="readonly" value="false"/>
 <property name="outputBinding" value="company/name"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="2" name="company_programType" type="Subform" id="210591909">
+<field position="1" name="company_address" type="InputText" id="1247496027">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;programType (company)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="label" value="quot;enquot;,quot;address (company)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="company/address"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="2" name="company_programType" type="Subform" id="302462519">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;programType (company)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
