--- a/poc/src/main/resources/org/epa/mda/poc/poc.CompanyRegistration-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/poc.CompanyRegistration-taskform.form
@@ -17,15 +17,26 @@
 <property name="outputBinding" value="company/address"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="2" name="company_programType" type="Subform" id="302462519">
+<field position="2" name="company_programType" type="InputText" id="1396221968">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;programType (company)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="label" value="quot;enquot;,quot;programType (company)quot;"/>
 <property name="readonly" value="false"/>
 <property name="outputBinding" value="company/programType"/>
-<property name="defaultSubform" value="ProgramTypeForm.form"/>
-<property name="fieldClass" value="java.lang.Object"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="3" name="company_busActivity1" type="InputText" id="681453099">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;busActivity1 (company)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="company/busActivity1"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="4" name="company_busActivity2" type="InputText" id="1355394699">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;busActivity2 (company)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="company/busActivity2"/>
+<property name="fieldClass" value="java.lang.String"/>
 </field>
 <dataHolder inputId="" name="#E9E371" type="dataModelerEntry" outId="company" value="org.epa.mda.poc.Company" id="company"/>
 </form>
