--- a/poc/src/main/resources/org/epa/mda/poc/EPA_Approval-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/EPA_Approval-taskform.form
@@ -3,48 +3,56 @@
 <property name="name" value="EPA_Approval-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
-<field position="0" name="company_address" type="InputText" id="1514533251">
+<field position="5" name="115795656" type="CheckBox" id="115795656">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;address (company)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="readonly" value="true"/>
-<property name="isHTML" value="false"/>
-<property name="hideContent" value="false"/>
-<property name="inputBinding" value="companyIn/address"/>
-<property name="outputBinding" value="companyOut/address"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="1" name="company_name" type="InputText" id="216229606">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;name (company)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="readonly" value="true"/>
-<property name="isHTML" value="false"/>
-<property name="hideContent" value="false"/>
-<property name="inputBinding" value="companyIn/name"/>
-<property name="outputBinding" value="companyOut/name"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="2" name="company_programType" type="Subform" id="1131849689">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;programType (company)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="readonly" value="true"/>
-<property name="inputBinding" value="companyIn/programType"/>
-<property name="outputBinding" value="companyOut/programType"/>
-<property name="defaultSubform" value="ProgramTypeForm.form"/>
-<property name="fieldClass" value="java.lang.Object"/>
-</field>
-<field position="3" name="115795656" type="CheckBox" id="115795656">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Approve Registrationquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Approve Registrationquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
 <property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<field position="0" name="company_name" type="InputText" id="471444181">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;enquot;,quot;name (company)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="companyIn/name"/>
+<property name="outputBinding" value="companyOut/name"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="1" name="company_address" type="InputText" id="1364607841">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;enquot;,quot;address (company)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="companyIn/address"/>
+<property name="outputBinding" value="companyOut/address"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="2" name="company_programType" type="InputText" id="1848351743">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;programType (company)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="companyIn/programType"/>
+<property name="outputBinding" value="companyOut/programType"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="3" name="company_busActivity1" type="InputText" id="425783973">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;busActivity1 (company)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="companyIn/busActivity1"/>
+<property name="outputBinding" value="companyOut/busActivity1"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="4" name="company_busActivity2" type="InputText" id="2086874568">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;busActivity2 (company)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="companyIn/busActivity2"/>
+<property name="outputBinding" value="companyOut/busActivity2"/>
+<property name="fieldClass" value="java.lang.String"/>
 </field>
 <dataHolder inputId="companyIn" name="#E9E371" type="dataModelerEntry" outId="companyOut" value="org.epa.mda.poc.Company" id="company"/>
 </form>
