--- a/poc/src/main/resources/org/epa/mda/poc/EPA_Approval-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/EPA_Approval-taskform.form
@@ -3,15 +3,6 @@
 <property name="name" value="EPA_Approval-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
-<field position="5" name="115795656" type="CheckBox" id="115795656">
-<property name="fieldRequired" value="false"/>
-<property name="groupWithPrevious" value="false"/>
-<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Approve Registrationquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="readonly" value="false"/>
-<property name="fieldClass" value="java.lang.Boolean"/>
-</field>
 <field position="0" name="company_name" type="InputText" id="471444181">
 <property name="fieldRequired" value="false"/>
 <property name="groupWithPrevious" value="false"/>
@@ -53,6 +44,31 @@
 <property name="inputBinding" value="companyIn/busActivity2"/>
 <property name="outputBinding" value="companyOut/busActivity2"/>
 <property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="7" name="115795656" type="CheckBox" id="115795656">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Approve Registrationquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="false"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<field position="5" name="company_part79" type="CheckBox" id="1951552108">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;part79 (company)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="companyIn/part79"/>
+<property name="outputBinding" value="companyOut/part79"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<field position="6" name="company_part80" type="CheckBox" id="1781078328">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;part80 (company)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="companyIn/part80"/>
+<property name="outputBinding" value="companyOut/part80"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
 </field>
 <dataHolder inputId="companyIn" name="#E9E371" type="dataModelerEntry" outId="companyOut" value="org.epa.mda.poc.Company" id="company"/>
 </form>
