{/poc/src/main/resources/org/epa/mda/poc/SRA_Assign_Ticket-taskform.form}

--- a/poc/src/main/resources/org/epa/mda/poc/SRA_Assign_Ticket-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/SRA_Assign_Ticket-taskform.form
@@ -27,7 +27,7 @@
 <property name="readonly" value="false"/>
 <property name="isHTML" value="false"/>
 <property name="hideContent" value="false"/>
-<property name="outputBinding" value="ticketNumber"/>
+<property name="outputBinding" value="ticketNumberOut"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
 <dataHolder inputId="companyIn" name="#E9E371" type="dataModelerEntry" outId="companyOut" value="org.epa.mda.poc.Company" id="company"/>
