{/poc/src/main/resources/org/epa/mda/poc/Team_Member_Review-taskform.form}

--- a/poc/src/main/resources/org/epa/mda/poc/Team_Member_Review-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/Team_Member_Review-taskform.form
@@ -91,5 +91,17 @@
 <property name="outputBinding" value="companyOut/part80"/>
 <property name="fieldClass" value="java.lang.Boolean"/>
 </field>
+<field position="8" name="ticketNumber" type="InputText" id="1351493899">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;ticketNumberIn (ticketNumber)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="true"/>
+<property name="isHTML" value="false"/>
+<property name="hideContent" value="false"/>
+<property name="inputBinding" value="ticketNumberIn"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
 <dataHolder inputId="companyIn" name="#E9E371" type="dataModelerEntry" outId="companyOut" value="org.epa.mda.poc.Company" id="company"/>
+<dataHolder inputId="ticketNumberIn" name="#E9E371" type="basicType" outId="" value="java.lang.String" id="ticketNumber"/>
 </form>
